Visibility of coordinates output element fixed

--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,8 @@
 	background-color:transparent;
 }
 
+
+
 .vertical_div>*::selection {
 	background-color:transparent;
 }
@@ -13,7 +15,7 @@ body {
 	margin:0;
 	padding:0;
 	width:100%;
-	font-family:caviar;
+	font-family: 'Poiret One';
 	font-size:18px;
 	color:#ffffff;
 	text-align:center;
@@ -22,6 +24,10 @@ body {
 	background: -o-linear-gradient(right, #0F426F, #3C8A96, #505960);
 	background: -moz-linear-gradient(right, #0F426F, #3C8A96, #505960);
 	background: linear-gradient(to top, #0F426F, transparent),linear-gradient(to right, #0F426F, #25849A, #3C8A96, #505960);
+}
+
+body * {
+	font-family: 'Poiret One';	
 }
 
 .control{
@@ -67,7 +73,6 @@ body {
 	display:inline-block;
 	padding:0 10px;
 	text-align:right;
-	font-family: 'Poiret One', cursive;
 	font-size:22px;
 	width:80px;
 }
@@ -79,7 +84,6 @@ body {
 }
 
 .output{
-	font-family: 'Poiret One', cursive;
 	font-size:22px;
 	padding:5px;
 	color:#ffffff;
@@ -95,7 +99,6 @@ body {
 
 #easingMode,#numOfPoints {
 	width:200px;
-	font-family: 'Poiret One', cursive;
 	font-size:22px;
 	padding:5px;
 	color:#ffffff;
@@ -113,7 +116,6 @@ body {
 	display:inline-block;
 	width:100px;
 	height:40px;
-	font-family: 'Poiret One', cursive;
 	font-size:22px;
 	color:#ffffff;
 	background-color:rgba(255,255,255,.3);
@@ -193,7 +195,6 @@ option{
 }
 
 #easeSample,#resetSample{
-	font-family: 'Poiret One', cursive;
 	font-size:22px;
 	padding:5px;
 	color:#ffffff;
@@ -217,12 +218,13 @@ option{
 	display:inline-block;
 	vertical-align:top;
 	box-sizing: content-box;
+	width:500px;
 	padding:10px;
 	margin:10px 3px;
 	box-shadow:1px 1px 10px 0px rgba(255,255,255,.2);
-	font-family: 'Poiret One', cursive;
 	font-size:22px;
 	color:#ffffff;
+	overflow:hidden;
 }
 
 #samp1, #samp2, #samp5, #samp6{
@@ -262,20 +264,26 @@ option{
 }
 
 #outputCoords{
+	position:relative;
+	top:0px;
+	left:0px;
 	font-family: inherit;
 	font-size:inherit;
-	color:inherit;
 	background-color:transparent;
 	border:none;
 	outline:none;
 	width:100%;
 	height:1em;
 	padding:.2em 0;
-	overflow:hidden;
 	white-space:nowrap;
-	text-overflow:ellipsis;
 	text-align:center;
 	cursor:pointer;
+	transition:left .5s ease-in-out;
+}
+#outputCoords span{
+	pointer-events: none;
+	text-shadow:0px 0px 0px rgba(255,255,255,0);
+	transition:text-shadow .3s ease-in-out;
 }
 
 #outputStatus{
